Bug #58165
rados: fix extra tabs on warning for pool copy
% Done:
0%
Source:
Tags:
backport_processed
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
rados tool
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Related issues
History
#1 Updated by Shreyansh Sancheti about 2 months ago
- Pull request ID set to 49251
#2 Updated by Laura Flores about 2 months ago
- Status changed from In Progress to Fix Under Review
#3 Updated by Yuri Weinstein about 2 months ago
#4 Updated by Shreyansh Sancheti about 2 months ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Shreyansh Sancheti about 2 months ago
- Backport set to quincy,pacific
#6 Updated by Backport Bot about 2 months ago
- Copied to Backport #58259: quincy: rados: fix extra tabs on warning for pool copy added
#7 Updated by Backport Bot about 2 months ago
- Copied to Backport #58260: pacific: rados: fix extra tabs on warning for pool copy added
#8 Updated by Backport Bot about 2 months ago
- Tags set to backport_processed