rados: fix extra tabs on warning for pool copy

There seems to be some extra tabs in rados cppool error message which might confuse users.In reality there should not be any extra spaces on warning messages.

Fixes: https://tracker.ceph.com/issues/58165
Signed-off-by: shreyanshjain7174 <ssanchet@redhat.com>
(cherry picked from commit 5008953617ff01b067ac58b9a4fc38be2abbce13)